force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/IF_IFRESH_SFDC_INFO_ORDER_0001__c.object-meta.xml
<CustomObject>
    <label>IF_IFRESH_SFDC_INFO_ORDER_0001</label>
    <nameField>
        <displayFormat>No-{00000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>