force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/BAS_TKSTK_QTY__c.field-meta.xml
<CustomField>
    <fullName>BAS_TKSTK_QTY__c</fullName>
    <label>BAS_TKSTK_QTY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>