force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/BAS_UNIT_CD__c.field-meta.xml
<CustomField>
    <fullName>BAS_UNIT_CD__c</fullName>
    <label>BAS_UNIT_CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>