force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/BILI_DOC_NO__c.field-meta.xml
<CustomField>
    <fullName>BILI_DOC_NO__c</fullName>
    <label>BILI_DOC_NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>