force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/BL_NO__c.field-meta.xml
<CustomField>
    <fullName>BL_NO__c</fullName>
    <label>BL_NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>