force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/BOX_CTCNT_QTY__c.field-meta.xml
<CustomField>
    <fullName>BOX_CTCNT_QTY__c</fullName>
    <label>BOX_CTCNT_QTY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>