force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/CRG_MA_ID__c.field-meta.xml
<CustomField>
    <fullName>CRG_MA_ID__c</fullName>
    <label>CRG_MA_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>