force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/DIV_ID__c.field-meta.xml
<CustomField>
    <fullName>DIV_ID__c</fullName>
    <label>DIV_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>