force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/DIV_NM__c.field-meta.xml
<CustomField>
    <fullName>DIV_NM__c</fullName>
    <label>DIV_NM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>