force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/DSTR_HIS_NO_RPT_OBJ_YN_NM__c.field-meta.xml
<CustomField>
    <fullName>DSTR_HIS_NO_RPT_OBJ_YN_NM__c</fullName>
    <label>DSTR_HIS_NO_RPT_OBJ_YN_NM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>