force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/GD_NM__c.field-meta.xml
<CustomField>
    <fullName>GD_NM__c</fullName>
    <label>GD_NM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>