force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/ISLIQ__c.field-meta.xml
<CustomField>
    <fullName>ISLIQ__c</fullName>
    <label>ISLIQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>