force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/LAR_GD_CLS_NM__c.field-meta.xml
<CustomField>
    <fullName>LAR_GD_CLS_NM__c</fullName>
    <label>LAR_GD_CLS_NM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>