force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/MID_GD_CLS_ID__c.field-meta.xml
<CustomField>
    <fullName>MID_GD_CLS_ID__c</fullName>
    <label>MID_GD_CLS_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>