force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/OPT_UNPRC__c.field-meta.xml
<CustomField>
    <fullName>OPT_UNPRC__c</fullName>
    <label>OPT_UNPRC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>