force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/ORDR_DTL_NO__c.field-meta.xml
<CustomField>
    <fullName>ORDR_DTL_NO__c</fullName>
    <label>ORDR_DTL_NO</label>
    <length>5</length>
    <type>Text</type>
</CustomField>