force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/ORDR_NO__c.field-meta.xml
<CustomField>
    <fullName>ORDR_NO__c</fullName>
    <label>ORDR_NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>