force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/ORDR_REAL_BUY_UNPRC__c.field-meta.xml
<CustomField>
    <fullName>ORDR_REAL_BUY_UNPRC__c</fullName>
    <label>ORDR_REAL_BUY_UNPRC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>