force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/pb_gd_cl_cd__c.field-meta.xml
<CustomField>
    <fullName>pb_gd_cl_cd__c</fullName>
    <label>pb_gd_cl_cd</label>
    <length>2</length>
    <type>Text</type>
</CustomField>