force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/PB_GD_CL_CD_NM__c.field-meta.xml
<CustomField>
    <fullName>PB_GD_CL_CD_NM__c</fullName>
    <label>PB_GD_CL_CD_NM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>