force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/REG_DT__c.field-meta.xml
<CustomField>
    <fullName>REG_DT__c</fullName>
    <label>REG_DT</label>
    <length>50</length>
    <type>Text</type>
</CustomField>