force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/RLSTK_UNIT_RLSTK_QTY_KG__c.field-meta.xml
<CustomField>
    <fullName>RLSTK_UNIT_RLSTK_QTY_KG__c</fullName>
    <label>RLSTK_UNIT_RLSTK_QTY_KG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>