force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/SALE_UNPRC__c.field-meta.xml
<CustomField>
    <fullName>SALE_UNPRC__c</fullName>
    <label>SALE_UNPRC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>