force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/SALES_AT__c.field-meta.xml
<CustomField>
    <fullName>SALES_AT__c</fullName>
    <label>SALES_AT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>