force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/SALES_LNKG_CL_CD__c.field-meta.xml
<CustomField>
    <fullName>SALES_LNKG_CL_CD__c</fullName>
    <label>SALES_LNKG_CL_CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>