force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/SALES_P_RT__c.field-meta.xml
<CustomField>
    <fullName>SALES_P_RT__c</fullName>
    <label>SALES_P_RT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>