force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/sales_seq__c.field-meta.xml
<CustomField>
    <fullName>sales_seq__c</fullName>
    <label>sales_seq</label>
    <length>20</length>
    <type>Text</type>
</CustomField>