force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/SALES_TAT__c.field-meta.xml
<CustomField>
    <fullName>SALES_TAT__c</fullName>
    <label>SALES_TAT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>