force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/SALES_YMD__c.field-meta.xml
<CustomField>
    <fullName>SALES_YMD__c</fullName>
    <label>SALES_YMD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>