force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/SAP_ERR_MSG__c.field-meta.xml
<CustomField>
    <fullName>SAP_ERR_MSG__c</fullName>
    <label>SAP_ERR_MSG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>