force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/SCHL_CD__c.field-meta.xml
<CustomField>
    <fullName>SCHL_CD__c</fullName>
    <label>SCHL_CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>