force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/SHIPLC_NM__c.field-meta.xml
<CustomField>
    <fullName>SHIPLC_NM__c</fullName>
    <label>SHIPLC_NM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>