force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/slbz_org_id__c.field-meta.xml
<CustomField>
    <fullName>slbz_org_id__c</fullName>
    <label>slbz_org_id</label>
    <length>4</length>
    <type>Text</type>
</CustomField>