force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/SPLY_CTR_ID__c.field-meta.xml
<CustomField>
    <fullName>SPLY_CTR_ID__c</fullName>
    <label>SPLY_CTR_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>