force-app/main/default/objects/IF_IFRESH_SFDC_INFO_ORDER_0001__c/fields/UPD_DT__c.field-meta.xml
<CustomField>
    <fullName>UPD_DT__c</fullName>
    <label>UPD_DT</label>
    <length>50</length>
    <type>Text</type>
</CustomField>